new video and image folder

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Danna.IO - Danna Wroblewski Front End Dev</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
+    <div class="wrapper">
+      <h1>Danna.IO</h1>
+      <video src="videos/animated_logo.mp4" autoplay controls poster="images/image_logo.png"></video>
+    </div>
   </body>
   </html>
