--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <h1>Danna.IO</h1>
-      <video src="videos/animated_logo.mp4" autoplay controls poster="images/image_logo.png"></video>
+      <video src="videos/animated_logo.mp4" autoplay="true" poster="images/image_logo.png"></video>
     </div>
   </body>
   </html>
